Armando el repo

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-lib_deps = cytrontechnologies/Cytron Motor Drivers Library@^1.0.1
+lib_deps = 
+	cytrontechnologies/Cytron Motor Drivers Library@^1.0.1
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.21.2
