--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,13 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
+upload_port = /dev/ttyUSB0
+monitor_speed = 115200
 lib_deps = 
 	cytrontechnologies/Cytron Motor Drivers Library@^1.0.1
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.2
+board_build.filesystem = littlefs
+board_build.ldscript = eagle.flash.4m2m.ld
+;monitor_filters = esp8266_exception_decoder, colorize
+;build_type = debug
