--- a/data/PidConfig.json
+++ b/data/PidConfig.json
@@ -1,32 +1,13 @@
 {
-    "FlowPin": 5,
-    "DirPin": 4,
-    "PWMPin": 0,
-    "FlowEnabled": false,
-    "RateError": 0.0,
-    "UPM": 2000.0,
-    "pwmSetting": 128,
-    "CommTime": 2000,
-    "InCommand": 0,
-    "ControlType": 2,
-    "TotalPulses": 0,
-    "RateSetting": 100.0,
-    "MeterCal": 1.0,
-    "ManualAdjust": 0.0,
-    "KP": 0.1,
-    "KI": 0.01,
-    "KD": 0.0,
-    "MinPWM": 64,
-    "MaxPWM": 200,
-    "Deadband": 2,
-    "BrakePoint": 0,
-    "UseMultiPulses": false,
-    "Debounce": 10,
-    "AnchoLabor":8,
-    "DosisHa":50,
-    "GramoPulso":0.015,
-    "speedKmH":0.00,
-    "SensorSemilla":13,
-    "Section":1
-  }
-  
+  "FlowEnabled": false,
+  "RateError": 0,
+  "Debounce": 0,
+  "KP": 0.0,
+  "KI": 0.0,
+  "KD": 0.0,
+  "Deadband": 0,
+  "BrakePoint": 0,
+  "UseMultiPulses": true,
+  "FlowOnDirection": "HIGH",
+  "FlowPin": 3
+}
