--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,28 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
-platform = espressif8266
-board = d1_mini
+[env:esp32]
+platform = espressif32
+board = esp32dev
+board_build.f_cpu = 240000000L
 framework = arduino
-upload_port = /dev/ttyUSB1
+board_build.filesystem = littlefs
+upload_port = /dev/ttyUSB0
 monitor_speed = 115200
 lib_deps = 
 	cytrontechnologies/Cytron Motor Drivers Library@^1.0.1
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.2
-board_build.filesystem = littlefs
-board_build.ldscript = eagle.flash.4m2m.ld
-;monitor_filters = esp8266_exception_decoder, colorize
-;build_type = debug
+	bbx10/DNSServer@^1.1.0
+	;;khoih-prog/WiFiWebServer@^1.10.1
+monitor_filters = esp32_exception_decoder
+board_build.flash_size = 16MB
+board_build.flash_mode = dio
+board_build.partitions = ./particiones.csv
+board_build.f_flash = 80000000L
+build_flags = -DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-mfix-esp32-psram-cache-strategy=memw
+	-DCORE_DEBUG_LEVEL=0
+	-D CONFIG_SPIRAM_ALLOW_BSS_SEG_EXTERNAL_MEMORY
+	-D CONFIG_SPIRAM_ALLOW_STACK_EXTERNAL_MEMORY
