--- a/data/WifiConfig.json
+++ b/data/WifiConfig.json
@@ -1,6 +1,4 @@
 {
   "SSID": "LB",
-  "Password": "1564santiago",
-  "UrlOTA": "https://update.agroparallel.com",
-	"PasswordOTA":"SuPassword"
+  "Password": "1564santiago"
 }
