--- a/platformio.ini
+++ b/platformio.ini
@@ -17,10 +17,10 @@ board_build.filesystem = littlefs
 upload_port = /dev/ttyUSB0
 monitor_speed = 115200
 lib_deps = 
-	cytrontechnologies/Cytron Motor Drivers Library@^1.0.1
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.2
 	bbx10/DNSServer@^1.1.0
+	r-downing/AutoPID@^1.0.4
 monitor_filters = esp32_exception_decoder
 board_build.flash_size = 16MB
 board_build.flash_mode = dio
