--- a/data/PidConfig.json
+++ b/data/PidConfig.json
@@ -1,17 +1,9 @@
 {
-  "FlowEnabled": false,
-  "RateError": 0,
-  "Debounce": 3,
   "KP": 0.05,
   "KI": 0.0,
   "KD": 0.0,
-  "Deadband": 0.5,
-  "BrakePoint": 0,
-  "UseMultiPulses": true,
   "FlowOnDirection": "LOW",
   "FlowPin": 21,
-  "pwmSetting":0,
-  "IntegralUpperLimit":0,
-  "IntegralLowerLimit":0,
-  "DerivativeFilter" :0
+  "pwmSetting":0
+ 
 }
