--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,8 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.2
 	bbx10/DNSServer@^1.1.0
-	r-downing/AutoPID@^1.0.4
+	br3ttb/PID@^1.2.1
+	
 monitor_filters = esp32_exception_decoder
 board_build.flash_size = 16MB
 board_build.flash_mode = dio
